# stock-analytics

./: .env.example  .gitignore  DEPLOY.md  ENHANCEMENTS_SPEC.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
dashboard/: .env.example  Dockerfile  index.html  mock-db.json  mock-routes.json  mock-server.mjs  nginx.conf  package-lock.json  package.json  patch-history.mjs  playwright.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/e2e/: dashboard.spec.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/hooks/: useStockData.ts  useTickerTape.ts  useWebSocket.ts
dashboard/src/lib/: utils.ts
dashboard/src/pages/: AlertsPage.tsx  AuthPage.tsx  BacktestPage.tsx  DashboardPage.tsx  PortfolioPage.tsx  SentimentPage.tsx  TickerDetailPage.tsx
dashboard/src/store/: stockStore.ts
dashboard/src/types/: stock.ts
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_phase2_tables.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboards.yml  stock_pipeline.json
scripts/: init_db.py  phase2_e2e_check.sh  seed_topics.py
src/: index.css  main.py
src/api/: auth.py  dependencies.py  middleware.py  websocket.py
src/api/routes/: alerts.py  analytics.py  backtest.py  portfolio.py  stocks.py  (+1 more)
src/config/: settings.py
src/consumer/: processor.py  stock_consumer.py
src/database/: db.py  models.py  repository.py
src/producer/: data_source.py  stock_producer.py
src/services/: alert_service.py  analytics_service.py  backtest_service.py  cache_service.py  claude_service.py  portfolio_service.py  sentiment_service.py
src/utils/: logger.py  metrics.py
tests/: conftest.py  test_analytics.py  test_api.py  test_consumer.py  test_producer.py
(+22 files in other folders)
